[package]
name = "conc-read-map"
version = "0.1.0"
authors = ["RustyYato <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
double-buffer = { path = '../double-buffer' }
sync_wrapper = '0.1'