[package]
name = "double-buffer"
version = "0.1.0"
authors = ["RustyYato <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ['std']
std = ['parking_lot']
nightly = ['smallvec/union']

[dependencies]
spin = '0.7'
parking_lot = { version = '0.11', optional = true }
smallvec = { version = '1', default-features = false }

[dev-dependencies]
crossbeam-channel = '0.5'
crossbeam-utils = '0.8'