[package]
name = "double-buffer"
version = "0.1.0"
authors = ["RustyYato <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ['std']
std = ['parking_lot', 'alloc']
alloc = ['smallvec']

[dependencies]
spin = '0.7'
crossbeam-utils = { version = '0.8', default-features = false }
parking_lot = { version = '0.11', optional = true }
smallvec = { version = '1', optional = true, default-features = false }
radium = { version = '0.6', default-features = false }

[dev-dependencies]
# use old versions to avoid https://github.com/rust-lang/cargo/issues/1796
test-crossbeam-channel = { version = '0.4', package = 'crossbeam-channel' }
test-crossbeam-utils = { version = '0.7', package = 'crossbeam-utils' }